--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* overflow-y: hidden; */
+}
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
